creación de páginas

--- a/Beachsunset.html
+++ b/Beachsunset.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Alquiler.html">Alquiler</a></li>
                 <li><a href="Venta.html">Venta</a></li>
-                <li><a href="Beach Sunset.html">Beach Sunset</a></li>
+                <li><a href="Beachsunset.html">Beach Sunset</a></li>
                 <li><a href="Contacto.html">Contacto</a></li>
             </ul>
         </nav>
