--- a/Beachsunset.html
+++ b/Beachsunset.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beach Sunset</title>
     <link rel="stylesheet" href="estilos.css">
+    <script src="página.js"></script>
+    <script src="./jquery-ui-1.13.3.custom/external/jquery/jquery.js"></script>
 </head>
 <body>
     <div id="contenedor">
@@ -50,7 +52,25 @@
                 <p><b>★ Luis Londoño: </b>Contestan muy rápido y nos atendieron en forma personalizada 
                 con gente muy capacitada dispuesta a que encuentres el departamento de tus sueños.</p>
                 <p><b>★ Carlos García: </b>Fuimos un fin de semana con amigos y alquilamos una casa espaciosa en donde 
-                entramos todos y la pasamos muy bien.</p> <br>
+                entramos todos y la pasamos muy bien.</p><br>
+        </div>
+        <div class="reseña">
+            <h3>¡Deja tu reseña!</h3>
+            <br>
+            <center><form action="infobeachsunset@gmail.com">
+                <label for="">Nombre y apellido:</label>
+                <input type="text">
+            </br>
+            <br>
+                <br>
+                    <label for="">Reseña:</label>
+                    <br>
+                    <textarea name="" id="" cols="40" rows="20"></textarea>
+                </br>
+                <br>
+                <input type="submit" value="Enviar" onclick="abrirpag();">
+                </br>
+            </form></center>
         </div>
         <footer>
             <div class="piedepágina">
@@ -63,7 +83,7 @@
                 <div class="contenidos">
                     <h3>Acerca de nosotros</h3>
                     <ul class="list">
-                        <li><a href="Beach Sunset.html">Beach Sunset</a></li>
+                        <li><a href="Beachsunset.html">Beach Sunset</a></li>
                     </ul>
                 </div>
                 <div class="contenidos">
