--- a/Contacto.html
+++ b/Contacto.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="estilos.css">
+    <script src="página.js"></script>
+    <script src="./jquery-ui-1.13.3.custom/external/jquery/jquery.js"></script>
 </head>
 <body>
     <div id="contenedor">
@@ -25,8 +27,8 @@
         <div class="formulario">
             <section>
                 
-                <center><h1>Contáctenos</h1>
-                    <form action="infobeachsunset@gmail.com">
+                <h1>Contáctenos</h1>
+                    <form>
                         <br>
                             <label for="">Nombre y apellido:</label>
                             <input type="text">
@@ -43,8 +45,10 @@
                             <label for="">Comentario:</label>
                             <textarea name="" id="" cols="30" rows="10"></textarea>
                         </br>
+                        <br>
+                        <input type="submit" value="Enviar" onclick="abrirpag();">
+                        </br>
                     </form>
-                </center>
             </section>
         </div>
         <footer>
@@ -58,7 +62,7 @@
                 <div class="contenidos">
                     <h3>Acerca de nosotros</h3>
                     <ul class="list">
-                        <li><a href="Beach Sunset.html">Beach Sunset</a></li>
+                        <li><a href="Beachsunset.html">Beach Sunset</a></li>
                     </ul>
                 </div>
                 <div class="contenidos">
